--- a/index.html
+++ b/index.html
@@ -14,33 +14,38 @@
 <body>
     <!-- start header section -->
     <header>
-         <!-- nav section -->
-         <nav>
+             <!-- nav section --> 
+         <nav class="main-nav">
             <div class="nav-container">
-                <h2><img src="Images/Group 40071 (2).png" alt="">Ghure<span> Ashi</span></h2>
-                <ul class="nav-section">
-                    <li><a href=""><span>Home</span></a></li>
-                    <li><a href="">Packages</a></li>
-                    <li><a href="">Testimonial</a></li>
-                    <li><a href="">Blog</a></li>
-                    <li><a href="">Contact</a></li>
-                </ul>
+                <div class="nav-title">
+                    <img src="Images/Group 40071 (2).png" alt="">
+                    <h2>Ghure<span> Ashi</span></h2>
+                </div>
+                <div class="manu-bar">
+                    <ul class="nav-section">
+                        <li><a href=""><span>Home</span></a></li>
+                        <li><a href="">Packages</a></li>
+                        <li><a href="">Testimonial</a></li>
+                        <li><a href="">Blog</a></li>
+                        <li><a href="">Contact</a></li>
+                    </ul>
+                </div>
+               
+                <div class="mobile-manu-bar BIGhide">
+                    <img class="nav-icon" src="Images/Frame.svg" alt="">
+                    <ul class="mobile-nav-section">
+                        <li><a href=""><span>Home</span></a></li>
+                        <li><a href="">Packages</a></li>
+                        <li><a href="">Testimonial</a></li>
+                        <li><a href="">Blog</a></li>
+                        <li><a href="">Contact</a></li>
+                    </ul>
+                </div>
             </div>
-            <div class="mobile-manu-bar BIGhide">
-                <img class="nav-icon" src="Images/Frame.svg" alt="">
-                <ul class="mobile-nav-section">
-                    <li><a href=""><span>Home</span></a></li>
-                    <li><a href="">Packages</a></li>
-                    <li><a href="">Testimonial</a></li>
-                    <li><a href="">Blog</a></li>
-                    <li><a href="">Contact</a></li>
-                </ul>
             </div>
-        </div>
-        </div>
-    
         </nav>
-             <!-- start banner section  -->
+
+             <!-- start banner section   -->
         <section>
             <div class="banner-container">
                 <div class="banner-shado">
@@ -169,7 +174,7 @@
             <div class="perfect-place-container">
                 <div class="perfect-place-description">
                     <h1>A Simple Perfect Place To Get Lost</h1>
-                    <p>Stay safe and become informed before you go – a travel guide or info from friends are a good place to start. Respect the rules and local customs and always .</p>
+                    <p>Stay safe and become informed before you go  a travel guide or info from friends are a good place to start. Respect the rules and local customs and always .</p>
                     <ul>
                         <li>Bali is the perfect destination for getting lost and finding yourself. This amazing island is famous for many things. First of all, you won't be able to miss.</li>
                         <li> Dream of travelling, buy yourself some good food or a t-shirt, go to an exhibition. Think about a friend. Growing and giving time and value to.</li>
